--- a/app/views/explores/show.html.erb
+++ b/app/views/explores/show.html.erb
@@ -52,7 +52,7 @@
               <label for="influencer_country"> Location </label>
               <%= country_select_tag :country, '', {:id => 'explore-country', prompt: 'Select Country'} %>
               <div id="explore-state">
-                <select name="state">
+                <select name="state" class="country-responsive-font">
                   <option value="">Select State</option>
                 </select>
               </div>
