--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -78,7 +78,7 @@
               </div>
               <div class="col-md-12">
                 <%= f.label :country %>
-                <%= f.country_select :country, {priority: %w(US CA IN)}, {:class => 'profile-dropdown-color'}, {} %>
+                <%= f.country_select :country, {priority: %w(US CA IN)}, {:class => 'profile-dropdown-color country-responsive-font'}, {} %>
               </div>
               <div class="col-md-12">
                 <%= f.label :state %>
