--- a/app/views/campaigns/_add_social_activity_modal.html.erb
+++ b/app/views/campaigns/_add_social_activity_modal.html.erb
@@ -18,9 +18,9 @@
                     <table class="table table-striped table-bordered table-responsive set-fb-activity-table">
                       <thead>
                           <tr class="payment-header">
-                            <th class="squaredFour"></th>
-                            <th>Campaign Name</th>
-                            <th>Date Billed</th>
+                            <th></th>
+                            <th>Activity Name</th>
+                            <th>Photo</th>
                           </tr>
                       </thead>
 
@@ -28,7 +28,7 @@
                       {{#each accounts}}
                           <tr class="js-clickable">
                             <td><input type="radio" class="vertical-align-middle" name="activity_id" value="{{id}}" {{#if active}}checked{{/if}}></td>
-                            <td><h4 class="media-heading vertical-align-middle">{{story}}{{message}}</h4></td>
+                            <td><div class="media-heading vertical-align-middle">{{story}}{{message}}</div></td>
                             <td>
 
                             {{#if picture}}
