--- a/app/views/shared/_footer_home_page.html.erb
+++ b/app/views/shared/_footer_home_page.html.erb
@@ -2,7 +2,7 @@
   <div class="wrapper-content">
 
     <div class="row contact-form">
-      <div class="col-md-7 col-sm-8 col-xs-12">
+      <div class="col-md-7 col-xs-12">
         <div class="text-top helvetica-neue-light"> Get in touch!</div>
 
         <%= form_tag get_in_touch_public_index_path, data: { parsley_validate: '' } do %>
