--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -1,5 +1,6 @@
 <%= stylesheet_link_tag 'bootstrap-chosen', media: 'all' %>
 <%= stylesheet_link_tag 'profile.css', media: 'all' %>
+<%= javascript_include_tag 'phone-format-global' %>
 <%= javascript_include_tag 'chosen.jquery' %>
 
 <% if @user.brand? %>
@@ -149,6 +150,25 @@
           $(".chosen").chosen({
               placeholder_text_multiple: 'Select Industry'
           });
+
+          $('button').click(function(e){
+              e.preventDefault();
+
+              var country_code = $('#user_country').find('option:selected').val();
+              var phone_number =  $('#user_phone').val();
+
+              if ( PhoneFormat.isValidNumber(phone_number, country_code) != true ) {
+//                  console.log(phone_number + '   ' +country_code);
+//                  console.log(PhoneFormat.isValidNumber(phone_number, country_code));
+                  bootbox.alert({message: 'Phone number is not correct', closeButton: false});
+              }
+              else
+              {
+                  $('.personal-info-form').submit();
+
+              }
+          });
+
       });
 
   </script>
