Profile page phone number alert Message change

--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -160,7 +160,7 @@
               if ( PhoneFormat.isValidNumber(phone_number, country_code) != true ) {
 //                  console.log(phone_number + '   ' +country_code);
 //                  console.log(PhoneFormat.isValidNumber(phone_number, country_code));
-                  bootbox.alert({message: 'Phone number is not correct', closeButton: false});
+                  bootbox.alert({message: 'Invalid phone number', closeButton: false});
               }
               else
               {
