--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1208,6 +1208,18 @@ h5, .h5 {
   max-width: 90%;
 }
 
+.image-body{
+  margin: 5px 0 0 34px;
+  max-width: 90%;
+}
+
+.message-image{
+  height: 50px;
+  width: 50px;
+}
+
+
+
 // faq page style sheet
 .group-1,.group-2{
   display: block;
@@ -1390,4 +1402,46 @@ a .offer-box:last-child{
   .country-responsive-font {
     font-size: 11px;
   }
+}
+
+.navbar-fixed-top, .navbar-fixed-bottom {
+  position: fixed;
+}
+
+.navbar-fixed-top {
+  top: 0;
+}
+
+#loading-indicator {
+  background-color: #25AAE1;
+  color: #ffffff;
+  display: none;
+  line-height: 45px;
+  font-weight: bold;
+  font-size: 14px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  text-align: center;
+  z-index: 1090;
+}
+
+.single-image-wrap{
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.preview-img{
+  height: 75px;
+}
+
+.image-rem{
+  color: #d9d9d9;
+  display: inline-block;
+  font-size: 2.4em;
+  font-weight: 100;
+  height: 20px;
+  margin-left: -12px;
+  margin-top: -14px;
+  opacity: 1.5;
+  vertical-align: top;
 }
