Secondary Nav down when scrolling problem solved

--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -40,7 +40,7 @@
 @media screen and (min-width: 768px) {
   .header {
     position: fixed;
-    top: 50px;
+    //top: 50px;
     right: 0;
     left: 0;
     z-index: 99;
