Influencer campaigns Export with excel format partially complete

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1445,3 +1445,11 @@ a .offer-box:last-child{
   opacity: 1.5;
   vertical-align: top;
 }
+
+.text-white {
+  color: white;
+}
+
+.text-white:hover {
+  color: white;
+}
