--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -49,6 +49,44 @@
                 </div>
               </div>
 
+              <!--status update filed-->
+              <div class="form-group" id="post-type-0">
+                <%= f.label :campaign_content, 'Status Message', class: 'control-label' %>
+                <div class="display-inline">
+                  <%= f.text_field :campaign_content, class: 'form-control', name: 'status_message' %>
+                </div>
+              </div>
+
+              <!--profile photo filed-->
+              <div class="form-group" id="post-type-1">
+                <div>
+                  <%= f.label :campaign_content, 'Choose a photo', class: 'control-label' %>
+                  <span class="glyphicon glyphicon-camera" title="Add Image"></span>
+                </div>
+
+                <div class="display-inline">
+                  <%= f.text_field :campaign_content, class: 'form-control', name: 'profile_photo_url' %>
+                </div>
+              </div>
+
+              <!--cover photo filed-->
+              <div class="form-group" id="post-type-2">
+                <%= f.label :campaign_content, 'Choose a photo', class: 'control-label' %>
+                <span class="glyphicon glyphicon-camera" title="Add Image"></span>
+
+                <div class="display-inline">
+                  <%= f.text_field :campaign_content, class: 'form-control', name: 'cover_photo_url' %>
+                </div>
+              </div>
+
+              <!--video post filed-->
+              <div class="form-group" id="post-type-3">
+                <%= f.label :campaign_content, 'Video URL', class: 'control-label' %>
+                <div class="display-inline">
+                  <%= f.text_field :campaign_content, class: 'form-control', name: 'video_url' %>
+                </div>
+              </div>
+
               <div class="form-group">
                 <%= f.label :cost, 'Cost ( INR )', class: 'control-label' %>
                 <div class="display-inline">
@@ -184,18 +222,43 @@
                 // Dont change value 0..3 here, they are post types of campaign. if need any change then synchronize with enum in Campaign model
                 if (this.value == 0) {
                     $('#post_cost').val(costs[social_account_index][0]);
+                    showHide(this.value);
                 }
                 else if (this.value == 1) {
                     $('#post_cost').val( costs[social_account_index][1] );
+                    showHide(this.value);
                 }
                 else if (this.value == 2) {
                     $('#post_cost').val(costs[social_account_index][2]);
+                    showHide(this.value);
                 }
                 else if (this.value == 3) {
                     $('#post_cost').val(costs[social_account_index][3]);
+                    showHide(this.value);
                 }
             }
 
         });
+
+        showHide(0);
+
+/*===== display other field depending on post type value ====*/
+/* ===== show_item either 0,1,2,3 that will show and other will hide =*/
+        function showHide(show_item){
+            console.log('Show hide method called with ' + show_item);
+            var item_ids_to_hide = [0,1,2,3];
+            item_ids_to_hide = item_ids_to_hide.filter(function(id){
+                return id !=show_item;
+            });
+
+            var base_id_text = '#post-type-';
+
+            item_ids_to_hide.forEach(function(id){
+                console.log('Show hide element called with ' + id);
+                $(base_id_text + id).hide();
+            });
+
+            $(base_id_text + show_item).show();
+        }
     })
 </script>
