hide image upload message navigation bar if there is no action image uploading

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1404,6 +1404,11 @@ a .offer-box:last-child{
   }
 }
 
+#image-loading-message{
+  z-index: 2001;
+  display: none;
+}
+
 .navbar-fixed-top, .navbar-fixed-bottom {
   position: fixed;
 }
