--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
   <%= yield :head %>
 </head>
 <body class="skin-blue sidebar-mini">
-<div class="navbar navbar-fixed-top flash-less-width" style="z-index: 2001;">
+<div class="navbar navbar-fixed-top flash-less-width" id="image-loading-message">
   <div id="loading-indicator">
     <span id="loader_img"><i class="fa fa-spinner"></i></span> Image loading. Please wait....
   </div>
