bind image upload and message send event with dynamically added offer to inbox

--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -64,7 +64,9 @@
         $('#inbox-black').hide();
     });
 
-    bindFileUpload();
+    $('.offer-box').each(function(){
+        bindFileUpload($(this));
+    });
 
 </script>
 
