--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -86,6 +86,16 @@
                 </div>
               </div>
 
+              <!--photo post field-->
+              <div class="form-group" id="post-type-4">
+                <%= f.label :campaign_content, 'Choose a photo', class: 'control-label' %>
+
+                <div class="display-inline">
+                  <span class="glyphicon glyphicon-camera" title="Add Image" id="upload-cover-photo"></span>
+                  <%= f.text_field :campaign_content, class: 'form-control input-with-img', name: 'photo_url' %>
+                </div>
+              </div>
+
               <div class="form-group">
                 <%= f.label :cost, 'Cost ( INR )', class: 'control-label' %>
                 <div class="display-inline">
@@ -254,6 +264,10 @@
                 }
                 else if (this.value == 3) {
                     $('#post_cost').val(costs[social_account_index][3]);
+                    showHide(this.value);
+                }
+                else if (this.value == 3) {
+                    $('#post_cost').val(costs[social_account_index][4]);
                     showHide(this.value);
                 }
             }
