add additional field to facebook accounts model complete

--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -78,6 +78,14 @@
                               <%= text_field_tag '', account.video_post_cost, :disabled => true %> INR
                             </div>
                           </div>
+                          <div class="form-group">
+                            <div class="col-md-6 col-sm-12 col-xs-12">
+                              <%= label_tag :photo_post_cost, 'Photo Post'  %>
+                              <%= text_field_tag '', account.photo_post_cost, :disabled => true %> INR
+                            </div>
+                            <div class="col-md-6 col-sm-12 col-xs-12">
+                            </div>
+                          </div>
                         </div>
                     <% end %>
                   </div>
