--- a/app/views/profile/_social_account_tabs.html.erb
+++ b/app/views/profile/_social_account_tabs.html.erb
@@ -39,6 +39,12 @@
                 <%= g.number_field :video_post_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR
               </div>
             </div>
+            <div class="form-group">
+              <div class="col-md-6 col-sm-12 col-xs-12">
+                <%= g.label :photo_post_cost, 'Photo Post' %>
+                <%= g.number_field :photo_post_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR
+              </div>
+            </div>
           </div>
 
       <% end %>
